# ditti-cms-api-old

./: .env.example  .gitignore  API.md  Procfile  README.md  crazy.py  main.py  package.json  pyproject.toml  tsconfig.json
ditti_api/: app.py  auth.py  database.py  server.py
ditti_api/controllers/: follow.py  tracker.py
ditti_api/models/: __init__.py  api_keys.py  follow_tracker.py  profile_tracker.py  trackee.py  tracker_manager.py
ditti_api/services/: tracker.py
ditti_web/: app.py  config.py  database.py
ditti_web/controllers/: follow.py  tracker.py
ditti_web/models/: __init__.py  follow_tracker.py  profile_tracker.py  trackee.py  tracker_manager.py
ditti_web/services/: tracker.py
migrations/versions/: 0c2d664b65f5_create_api_keys_table.py  3d6f8675c8ef_add_pfp_url.py  94ee36c8f08a_update_models_using_datetime_timezone.py
server/: main.py  pyproject.toml
server/ditti_web/: app.py  server.py
server/ditti_web/models/: profile_tracker.py
server/ditti_web/services/: tracker.py
server/migrations/versions/: 213d1f998bda_initial_models_migrations.py
src/: app.ts  crazy.ts  index.ts  server.ts
src/controllers/: hello.ts
src/middleware/: errorHandler.ts  unknownEndpoint.ts
src/routes/: hello.ts
