[tool.poetry]
name = "ditti-cms-api"
version = "0.1.0"
description = ""
authors = ["Alex Paden <padenalex0@gmail.com>"]
readme = "README.md"
packages = [{include = "ditti_api"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
farcaster = "^0.7.1"
python-dotenv = "^0.21.1"
supabase = "^1.0.0"
flask-migrate = "^4.0.4"
psycopg2-binary = "^2.9.5"
flask-cors = "^3.0.10"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
